2008-02-11  Mark Ellis <mark@mpellis.org.uk>

	* x86_64 fixes, thanks to Daniel Faivre

2003-10-24 23:11  voc

	* Doxyfile: [no log message]

2003-10-24 23:08  voc

	* raki/plugins/kdeaddressbooksync/kdeaddressbooksync.h: Code
	  cleaning

2003-10-24 23:08  voc

	* raki/plugins/agsync/: agsync.cpp, agsync.h, agsyncconfig.cpp,
	  agsyncconfig.h, agsyncconfig.ui, agsyncconfigimpl.cpp,
	  agsyncconfigimpl.h: AvantGo synchronizer now has a configuration
	  menu

2003-10-24 23:06  voc

	* raki/: pda.cpp, pda.h, pdaconfigdialog.ui, pdaconfigdialog.ui.h,
	  pdaconfigdialogimpl.cpp, pdaconfigdialogimpl.h,
	  rakiworkerthread.cpp, runwindowimpl.cpp, syncdialogimpl.cpp,
	  syncdialogimpl.h, synctasklistitem.cpp, synctasklistitem.h,
	  interfaces/rakisyncplugin.cpp, interfaces/rakisyncplugin.h: Added
	  infrastructure which provides synchronizer plugins with a
	  mechanism to support individual configuration menus.

2003-10-24 23:04  voc

	* debian/changelog: New version

2003-10-24 23:04  voc

	* debian/control: Update to honor also the agsync package which is
	  already in debain unstable

2003-10-24 23:03  voc

	* admin/am_edit: Automaticly remove *.pcs from the distribution

2003-10-24 23:02  voc

	* configure.in.in: Preperation for next minor update

2003-10-13 02:12  voc

	* raki/plugins/agsync/: Makefile.am, agsync.cpp, agsync.h,
	  agsyncconfig.ui, agsyncconfigimpl.cpp, agsyncconfigimpl.h,
	  agsyncconfig.ui.h: Configuration implemented

2003-10-13 02:12  voc

	* raki/interfaces/: rakisyncplugin.cpp, rakisyncplugin.h:
	  configuration implemented

2003-10-13 02:11  voc

	* raki/pda.cpp: Function arguments updated

2003-10-13 02:10  voc

	* raki/: synctasklistitem.cpp, synctasklistitem.h: Configur dialog
	  of the synchronizer is called

2003-10-13 02:10  voc

	* raki/: syncdialogimpl.cpp, syncdialogimpl.h: Funcion arguments
	  updated

2003-10-13 02:08  voc

	* raki/: pdaconfigdialogimpl.cpp, pdaconfigdialogimpl.h: PDA