@@ -1,3 +1,7 @@
+2008-02-12  Mark Ellis <mark@mpellis.org.uk>
+
+	* get device ip from libsynce, not vdccm device files
+
 2008-02-11  Mark Ellis <mark@mpellis.org.uk>
 
 	* x86_64 fixes, thanks to Daniel Faivre
